--- a/modules/common/css/global.scss
+++ b/modules/common/css/global.scss
@@ -97,6 +97,7 @@ ion-popover.actionSheetPopover {
   ion-input {
     opacity: 1 !important;
     -webkit-text-fill-color: var(--ion-text-color);
+    --placeholder-opacity: 0 !important;
   }
 }
 
