style: hide obligatory dot on viewMode

--- a/modules/common/css/global.scss
+++ b/modules/common/css/global.scss
@@ -97,6 +97,9 @@ ion-popover.actionSheetPopover {
     -webkit-text-fill-color: var(--ion-text-color);
     --placeholder-opacity: 0 !important;
   }
+  ion-text.obligatoryDot {
+    display: none;
+  }
 }
 
 ion-text.obligatoryDot::after {
