fix: dark mode not dependant on TinCan

--- a/modules/agenda/src/agenda.component.html
+++ b/modules/agenda/src/agenda.component.html
@@ -96,8 +96,8 @@
       [class.declined]="Attendance.DECLINED === weekEvent.event.attendance"
       [class.tentative]="Attendance.TENTATIVE === weekEvent.event.attendance"
       [style.border-left-color]="weekEvent.event.color.primary"
-      [style.color]="getAlternateColor(weekEvent.event.color.primary, tc.get('darkMode') ? 80 : -40)"
-      [style.background-color]="getAlternateColor(weekEvent.event.color.primary, tc.get('darkMode') ? 60 : 80, 0.2)"
+      [style.color]="getAlternateColor(weekEvent.event.color.primary, darkMode ? 80 : -40)"
+      [style.background-color]="getAlternateColor(weekEvent.event.color.primary, darkMode ? 60 : 80, 0.2)"
       [mwlCalendarTooltip]="!tooltipDisabled && !platform.is('mobile') ? getTooltipContent(weekEvent.event) : ''"
       [tooltipPlacement]="tooltipPlacement"
       [tooltipEvent]="weekEvent.tempEvent || weekEvent.event"
