--- a/modules/common/src/userAvatar/userAvatar.component.scss
+++ b/modules/common/src/userAvatar/userAvatar.component.scss
@@ -18,6 +18,10 @@ div.circle {
   }
 }
 
+.mini {
+  --avatar-size: 14px;
+  --avatar-font-size: 8px;
+}
 .small {
   --avatar-size: 24px;
   --avatar-font-size: 9px;
