--- a/modules/agenda/src/agenda.component.scss
+++ b/modules/agenda/src/agenda.component.scss
@@ -17,12 +17,10 @@
     margin-top: 4px;
     margin-left: 5px;
     text-align: right;
-    ion-avatar {
+    idea-user-avatar {
       display: block;
       float: left;
       margin: 2px 1px;
-      width: 14px;
-      height: 14px;
     }
     ion-icon {
       padding-right: 2px;
