style(common): user avatar fallback position

--- a/modules/common/src/userAvatar/userAvatar.component.scss
+++ b/modules/common/src/userAvatar/userAvatar.component.scss
@@ -12,6 +12,7 @@ div.circle {
   border-radius: 50%;
   display: inline-block;
   text-align: center;
+  vertical-align: top;
   div.text {
     font-weight: bold;
     letter-spacing: -0.5px;
